--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,13 @@
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-jsr310</artifactId>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/com.h2database/h2  scope: test. so when test it's runs   -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>2.2.224</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
